spring/spring-mvc/ocp/openshift/rhoar-training-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: e0a6bedfb1d80d2886d21457e98e8488d3eec99b
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=rhoar-training&var-version=0.0.1-SNAPSHOT
  labels:
    app: rhoar-training
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: rhoar-training
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: rhoar-training
    provider: fabric8
    group: com.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: e0a6bedfb1d80d2886d21457e98e8488d3eec99b
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=rhoar-training&var-version=0.0.1-SNAPSHOT
      labels:
        app: rhoar-training
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.example
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: my-database-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: my-database-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ""
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: rhoar-training:latest
    type: ImageChange
