spring/spring-mvc/ocp/openshift/rhoar-training-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: rhoar-training
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: rhoar-training
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rhoar-training
